src/_includes/postcss/_components-grid.css
.grid {
  display: grid;
  grid-template-columns: 1fr;
  gap: 3rem;
  margin-top: 1.5rem;
  padding: 0;

  @media (min-width: 31.25rem) {
    grid-template-columns: 1fr 1fr;
  }
}

.grid__group-name {
  margin-top: 3rem;
  font-size: 2.25rem;
}

.grid__imageLink {
  position: relative;
  display: block;

  &::after {
    content: "";
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    background: black;
    opacity: 0;
    pointer-events: none;
  }

  &:hover {
    .grid__details {
      opacity: 1;
      transform: translateX(-50%) translateY(-50%);
    }

    &::after {
      opacity: 0.7;
    }
  }
}

.grid__description {
  font-family: "Canela Deck Web", serif;
  margin: 0.25rem auto 0;
  padding-top: 1rem;
  position: relative;
  width: 80%;
  font-size: 1rem;

  text-align: center;

  &::before {
    content: "";
    position: absolute;
    top: calc(0.5rem + 1px);
    left: 0;
    left: 25%;
    width: 50%;
    height: 1px;
    border-bottom: 1px solid #ccc;
  }
}

.grid__title {
  display: block;
  font-size: 1.5rem;
  font-family: "Canela Deck Web", serif;
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.125;
  color: inherit;
  margin-top: 1.25rem;
  text-decoration: none;
  text-align: center;

  &:hover {
    text-decoration: underline;
    background: none;
  }
}

.grid__image {
  grid-column: 1;
}

.grid__imageLink::after,
.grid__image {
  transition: opacity 0.3s;
}

.grid__item {
  list-style: none;
  padding: none;
}

